--- a/radcliffe-2/style.css
+++ b/radcliffe-2/style.css
@@ -982,13 +982,11 @@ textarea {
 # Alignments
 --------------------------------------------------------------*/
 .alignleft {
-	display: inline;
 	float: left;
 	margin-right: 1.6em;
 }
 
 .alignright {
-	display: inline;
 	float: right;
 	margin-left: 1.6em;
 }
